--- a/DScaler/PlugTest/PlugTest2005.vcproj
+++ b/DScaler/PlugTest/PlugTest2005.vcproj
@@ -197,7 +197,7 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="Debug Express|Win32"
+			Name="Debug_Express|Win32"
 			OutputDirectory="$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
@@ -289,7 +289,7 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="Release Express|Win32"
+			Name="Release_Express|Win32"
 			OutputDirectory="$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
@@ -413,7 +413,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Debug Express|Win32"
+					Name="Debug_Express|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -425,7 +425,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Release Express|Win32"
+					Name="Release_Express|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -461,7 +461,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Debug Express|Win32"
+					Name="Debug_Express|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -473,7 +473,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Release Express|Win32"
+					Name="Release_Express|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -511,7 +511,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Debug Express|Win32"
+					Name="Debug_Express|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -524,7 +524,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Release Express|Win32"
+					Name="Release_Express|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
