--- a/DScaler/Plugins/DI_TomsMoComp/DI_TomsMoComp2005.vcproj
+++ b/DScaler/Plugins/DI_TomsMoComp/DI_TomsMoComp2005.vcproj
@@ -203,7 +203,7 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="Debug Express|Win32"
+			Name="Debug_Express|Win32"
 			OutputDirectory="$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
@@ -297,7 +297,7 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="Release Express|Win32"
+			Name="Release_Express|Win32"
 			OutputDirectory="$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
@@ -424,7 +424,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Debug Express|Win32"
+					Name="Debug_Express|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -435,7 +435,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Release Express|Win32"
+					Name="Release_Express|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -470,7 +470,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Debug Express|Win32"
+					Name="Debug_Express|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -481,7 +481,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Release Express|Win32"
+					Name="Release_Express|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -516,7 +516,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Debug Express|Win32"
+					Name="Debug_Express|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -527,7 +527,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Release Express|Win32"
+					Name="Release_Express|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -562,7 +562,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Debug Express|Win32"
+					Name="Debug_Express|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -573,7 +573,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Release Express|Win32"
+					Name="Release_Express|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
