--- a/DScaler/Plugins/FLT_DScopeVIDEO/FLT_DScopeVIDEO2005.vcproj
+++ b/DScaler/Plugins/FLT_DScopeVIDEO/FLT_DScopeVIDEO2005.vcproj
@@ -204,7 +204,7 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="Debug Express|Win32"
+			Name="Debug_Express|Win32"
 			OutputDirectory="$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
@@ -300,7 +300,7 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="Release Express|Win32"
+			Name="Release_Express|Win32"
 			OutputDirectory="$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
@@ -425,7 +425,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Debug Express|Win32"
+					Name="Debug_Express|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -436,7 +436,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Release Express|Win32"
+					Name="Release_Express|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
