--- a/DScaler/SendMsg/SendMsg2005.vcproj
+++ b/DScaler/SendMsg/SendMsg2005.vcproj
@@ -202,7 +202,7 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="Debug Express|Win32"
+			Name="Debug_Express|Win32"
 			OutputDirectory="$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
@@ -295,7 +295,7 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="Release Express|Win32"
+			Name="Release_Express|Win32"
 			OutputDirectory="$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
@@ -419,7 +419,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Debug Express|Win32"
+					Name="Debug_Express|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -429,7 +429,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Release Express|Win32"
+					Name="Release_Express|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
