--- a/DSRend/DSRend2005.vcproj
+++ b/DSRend/DSRend2005.vcproj
@@ -21,7 +21,7 @@
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			UseOfMFC="0"
-			UseOfATL="1"
+			UseOfATL="0"
 			ATLMinimizesCRunTimeLibraryUsage="false"
 			CharacterSet="2"
 			>
@@ -172,7 +172,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="odbc32.lib odbccp32.lib strmiids.lib version.lib"
 				OutputFile="..\DScaler\Debug/DSRend.dll"
-				LinkIncremental="1"
+				LinkIncremental="2"
 				SuppressStartupBanner="true"
 				ModuleDefinitionFile=".\DSRend.def"
 				GenerateDebugInformation="true"
@@ -208,6 +208,7 @@
 		</Configuration>
 		<Configuration
 			Name="Debug Express|Win32"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
 			>
@@ -815,6 +816,16 @@
 						Name="VCCustomBuildTool"
 						Description="Assembling"
 						CommandLine="ml /c /Zd /coff /nologo /Fo$(IntDir)\$(InputName).obj $(InputPath)&#x0D;&#x0A;"
+						Outputs="$(IntDir)\$(InputName).obj"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Debug Express|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						Description="Assembling"
+						CommandLine="ml /c /Zd /coff /nologo /Fo$(IntDir)\$(InputName).obj $(InputPath)"
 						Outputs="$(IntDir)\$(InputName).obj"
 					/>
 				</FileConfiguration>
