Added MSI TV@nywhere Plus

--- a/DScaler/Release/SAA713xCards.ini
+++ b/DScaler/Release/SAA713xCards.ini
@@ -1,4 +1,4 @@
-; $Id: SAA713xCards.ini,v 1.18 2005-11-12 03:19:55 dosx86 Exp $
+; $Id: SAA713xCards.ini,v 1.19 2007-08-23 14:44:44 dosx86 Exp $
 ;
 ; SAA713x card list.
 ;
@@ -866,6 +866,7 @@ DeviceID     = 0x7133
 DefaultTuner = philips_tda8275
 GPIOMask     = 0x0019E700
 AutoDetectID = 0x03045168
+AudioCrystal = 24MHz
 
 Input ( "Tuner", tuner )
     VideoPin = 1
@@ -1402,6 +1403,30 @@ Input ( "S-Video", svideo )
 Input ( "Radio", radio )
  AudioPin = line2
 
+[MSI TV@nywhere Plus]
+DeviceID     = 0x7133
+DefaultTuner = philips_tda8275
+GPIOMask     = 0x39E700
+AutoDetectID = 0x62311462
+AudioCrystal = 32MHz
+
+Input ("Tuner", tuner)
+    VideoPin = 1
+    AudioPin = line1
+    GPIOSet(0x16400, 0x39E700)
+
+Input ("Composite", composite)
+    VideoPin = 3
+    AudioPin = line1
+    GPIOSet(0x16400, 0x39E700)
+
+Input ("S-Video", svideo)
+    VideoPin = 0
+    AudioPin = line1
+    GPIOSet(0x16400, 0x39E700)
+
+Final ()
+    GPIOSet(0x16400, 0x39E700)
 
 ; ***** Tuner list: (as at July 2005) *****
 ; auto                        -2
