First step cleaning up Express project settings: now only one subfolder is created when compiling.

--- a/DScaler/Plugins/DI_Adaptive/DI_Adaptive2005.vcproj
+++ b/DScaler/Plugins/DI_Adaptive/DI_Adaptive2005.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="8,00"
 	Name="DI_Adaptive"
 	ProjectGUID="{454FB767-448C-4F85-9830-2906FE5F4C7A}"
 	RootNamespace="DI_Adaptive"
@@ -240,10 +240,12 @@
 				AdditionalIncludeDirectories="..\..\Api"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;DI_ADAPTIVE_EXPORTS"
 				RuntimeLibrary="1"
-				PrecompiledHeaderFile=".\Debug/DI_Adaptive.pch"
-				AssemblerListingLocation=".\Debug/"
-				ObjectFile=".\Debug/"
-				ProgramDataBaseFileName=".\Debug/"
+				PrecompiledHeaderFile=""
+				AssemblerListingLocation="$(IntDir)\"
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\"
+				BrowseInformation="1"
+				BrowseInformationFile="$(IntDir)\"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="3"
@@ -267,8 +269,8 @@
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile=".\Debug/DI_Adaptive.pdb"
-				ImportLibrary=".\Debug/DI_Adaptive.lib"
+				ProgramDatabaseFile="$(IntDir)\DI_Adaptive.pdb"
+				ImportLibrary="$(IntDir)\DI_Adaptive.lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -336,10 +338,10 @@
 				AdditionalIncludeDirectories="..\..\Api"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;DI_ADAPTIVE_EXPORTS"
 				RuntimeLibrary="0"
-				PrecompiledHeaderFile=".\Release/DI_Adaptive.pch"
-				AssemblerListingLocation=".\Release/"
-				ObjectFile=".\Release/"
-				ProgramDataBaseFileName=".\Release/"
+				PrecompiledHeaderFile=""
+				AssemblerListingLocation="$(IntDir)\"
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				CompileAs="0"
@@ -362,9 +364,9 @@
 				OutputFile="..\..\Release/DI_Adaptive.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				ProgramDatabaseFile=".\Release/DI_Adaptive.pdb"
+				ProgramDatabaseFile="$(IntDir)\DI_Adaptive.pdb"
 				OptimizeForWindows98="1"
-				ImportLibrary=".\Release/DI_Adaptive.lib"
+				ImportLibrary="$(IntDir)\DI_Adaptive.lib"
 				TargetMachine="1"
 			/>
 			<Tool
