--- a/DScaler/Plugins/DI_BlendedClip/DI_BlendedClip2005.vcproj
+++ b/DScaler/Plugins/DI_BlendedClip/DI_BlendedClip2005.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="8,00"
 	Name="DI_BlendedClip"
 	ProjectGUID="{2F9AF3C5-AEA3-4EEA-A4CF-9D4B825AF51F}"
 	RootNamespace="DI_BlendedClip"
@@ -237,10 +237,11 @@
 				AdditionalIncludeDirectories="..\..\Api"
 				PreprocessorDefinitions="_DEBUG;WIN32;_WINDOWS;DI_BLENDEDCLIP_EXPORTS"
 				RuntimeLibrary="1"
-				PrecompiledHeaderFile=".\Debug/DI_BlendedClip.pch"
-				AssemblerListingLocation=".\Debug/"
-				ObjectFile=".\Debug/"
-				ProgramDataBaseFileName=".\Debug/"
+				PrecompiledHeaderFile=""
+				AssemblerListingLocation="$(IntDir)\"
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\"
+				BrowseInformation="1"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="3"
@@ -264,8 +265,8 @@
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile=".\Debug/DI_BlendedClip.pdb"
-				ImportLibrary=".\Debug/DI_BlendedClip.lib"
+				ProgramDatabaseFile="$(IntDir)\DI_BlendedClip.pdb"
+				ImportLibrary="$(IntDir)\DI_BlendedClip.lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -332,10 +333,10 @@
 				AdditionalIncludeDirectories="..\..\Api"
 				PreprocessorDefinitions="NDEBUG;WIN32;_WINDOWS;DI_BLENDEDCLIP_EXPORTS"
 				RuntimeLibrary="0"
-				PrecompiledHeaderFile=".\Release/DI_BlendedClip.pch"
-				AssemblerListingLocation=".\Release/"
-				ObjectFile=".\Release/"
-				ProgramDataBaseFileName=".\Release/"
+				PrecompiledHeaderFile=""
+				AssemblerListingLocation="$(IntDir)\"
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				CompileAs="0"
@@ -358,9 +359,9 @@
 				OutputFile="..\..\Release/DI_BlendedClip.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				ProgramDatabaseFile=".\Release/DI_BlendedClip.pdb"
+				ProgramDatabaseFile="$(IntDir)\DI_BlendedClip.pdb"
 				OptimizeForWindows98="1"
-				ImportLibrary=".\Release/DI_BlendedClip.lib"
+				ImportLibrary="$(IntDir)\DI_BlendedClip.lib"
 				TargetMachine="1"
 			/>
 			<Tool
