--- a/DScaler/Plugins/DI_GreedyH/DI_GreedyH2005.vcproj
+++ b/DScaler/Plugins/DI_GreedyH/DI_GreedyH2005.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="8,00"
 	Name="DI_GreedyH"
 	ProjectGUID="{FCEB20D5-822B-4605-BB6F-5AAE193AD152}"
 	RootNamespace="DI_GreedyH"
@@ -242,12 +242,12 @@
 				PreprocessorDefinitions="DI_GreedyH_EXPORTS;WIN32;_DEBUG;_WINDOWS"
 				RuntimeLibrary="1"
 				BufferSecurityCheck="false"
-				PrecompiledHeaderFile=".\Debug/DI_GreedyH.pch"
-				AssemblerListingLocation=".\Debug/"
-				ObjectFile=".\Debug/"
-				ProgramDataBaseFileName=".\Debug/"
+				PrecompiledHeaderFile=""
+				AssemblerListingLocation="$(IntDir)\"
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\"
 				BrowseInformation="1"
-				BrowseInformationFile=".\Debug/"
+				BrowseInformationFile="$(IntDir)\"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="3"
@@ -260,6 +260,7 @@
 				Name="VCResourceCompilerTool"
 				PreprocessorDefinitions="_DEBUG"
 				Culture="1033"
+				ResourceOutputFileName="$(IntDir)\$(InputName).res"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
@@ -272,8 +273,8 @@
 				SuppressStartupBanner="true"
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile=".\Debug/DI_GreedyH.pdb"
-				ImportLibrary=".\Debug/DI_GreedyH.lib"
+				ProgramDatabaseFile="$(IntDir)\DI_GreedyH.pdb"
+				ImportLibrary="$(IntDir)\DI_GreedyH.lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -341,10 +342,10 @@
 				RuntimeLibrary="0"
 				BufferSecurityCheck="false"
 				EnableFunctionLevelLinking="true"
-				PrecompiledHeaderFile=".\Release/DI_GreedyH.pch"
-				AssemblerListingLocation=".\Release/"
-				ObjectFile=".\Release/"
-				ProgramDataBaseFileName=".\Release/"
+				PrecompiledHeaderFile="$(IntDir)\DI_GreedyH.pch"
+				AssemblerListingLocation="$(IntDir)\"
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				CompileAs="0"
@@ -368,7 +369,7 @@
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				OptimizeForWindows98="1"
-				ImportLibrary=".\Release/DI_GreedyH.lib"
+				ImportLibrary="$(IntDir)\DI_GreedyH.lib"
 				TargetMachine="1"
 			/>
 			<Tool
