--- a/DScaler/Plugins/DI_MoComp2/DI_MoComp22005.vcproj
+++ b/DScaler/Plugins/DI_MoComp2/DI_MoComp22005.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="8,00"
 	Name="DI_MoComp2"
 	ProjectGUID="{9C4FBDCD-5CE2-4531-A7C0-594613FAEE6B}"
 	>
@@ -238,12 +238,12 @@
 				AdditionalIncludeDirectories="..\..\Api"
 				PreprocessorDefinitions="DI_MoComp2_EXPORTS;WIN32;_DEBUG;_WINDOWS"
 				RuntimeLibrary="1"
-				PrecompiledHeaderFile=".\Debug/DI_MoComp2.pch"
-				AssemblerListingLocation=".\Debug/"
-				ObjectFile=".\Debug/"
-				ProgramDataBaseFileName=".\Debug/"
+				PrecompiledHeaderFile=""
+				AssemblerListingLocation="$(IntDir)\"
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\"
 				BrowseInformation="1"
-				BrowseInformationFile=".\Debug/"
+				BrowseInformationFile="$(IntDir)\"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="3"
@@ -263,12 +263,13 @@
 			<Tool
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
+				AdditionalDependencies="user32.lib"
 				OutputFile="..\..\Debug/DI_MoComp2.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile=".\Debug/DI_MoComp2.pdb"
-				ImportLibrary=".\Debug/DI_MoComp2.lib"
+				ProgramDatabaseFile="$(IntDir)\DI_MoComp2.pdb"
+				ImportLibrary="$(IntDir)\DI_MoComp2.lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -337,10 +338,10 @@
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
-				PrecompiledHeaderFile=".\Release/DI_MoComp2.pch"
-				AssemblerListingLocation=".\Release/"
-				ObjectFile=".\Release/"
-				ProgramDataBaseFileName=".\Release/"
+				PrecompiledHeaderFile=""
+				AssemblerListingLocation="$(IntDir)\"
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				CompileAs="0"
@@ -359,11 +360,12 @@
 			<Tool
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
+				AdditionalDependencies="user32.lib"
 				OutputFile="..\..\Release/DI_MoComp2.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				ProgramDatabaseFile=".\Release/DI_MoComp2.pdb"
-				ImportLibrary=".\Release/DI_MoComp2.lib"
+				ProgramDatabaseFile="$(IntDir)\DI_MoComp2.pdb"
+				ImportLibrary="$(IntDir)\DI_MoComp2.lib"
 				TargetMachine="1"
 			/>
 			<Tool
